--- a/style/style.css
+++ b/style/style.css
@@ -40,7 +40,7 @@ header {
 
 header > h1 {
     font-family: var(--fonte-destaque);
-    font-size: 3em;
+    font-size: 2.5em;
     color: white;
     text-align: center;
     margin-bottom: 5px;
@@ -48,7 +48,7 @@ header > h1 {
 
 header > p {
     font-family: var(--fonte-padrao);
-    font-size: 1.2em;
+    font-size: 1.1em;
     color: white;
     text-align: center;
 
@@ -58,22 +58,23 @@ nav {
     background-color: #275a48;
     height: auto;
     width: auto;
-    padding: 15px;
+    padding: 10px;
 }
 
 nav > a {
     color: white;
-    font-weight: 500;
+    font-size: 0.8em;
+    font-weight: normal;
     text-decoration: none;
     margin: 0px;
-    padding: 15px;
+    padding: 10px;
     transition-duration: 0.5s;
 }
 
 nav > a:hover {
     background-color: #ffffff;
     color: #275a48;
-    border-radius: 7px;
+    border-radius: 5px;
     
 }
 
@@ -82,7 +83,7 @@ main {
     min-width: 300px;
     max-width: 800px;
     margin: auto auto 10px auto; 
-    padding: 20px;
+    padding: 15px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.418);
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
@@ -94,6 +95,14 @@ main img {
 
 main h1, h2 {
     font-family: var(--fonte-android);
+    padding: 5px 0px;
+}
+main h1 {
+    font-size: 2em;
+}
+
+main h2 {
+    font-size: 1.5em;
 }
 
 main p {
@@ -101,7 +110,7 @@ main p {
     text-align: justify;
     text-indent: 25px;
     font-size: 1em;
-    line-height: 1.5em;
+    line-height: 1.65em;
 }
 
 main strong {
@@ -151,14 +160,14 @@ main img#pequena {
 aside {
     background-color: #70ccadbd;
     border-radius: 20px;
-    padding: 10px;
+    padding: 5px;
     box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.274);
 }
 
 aside > h3 {
     color: white;
     background-color: #275a48;
-    font-size: 1.3em;
+    font-size: 1.25em;
     margin: -10px -10px 0px -10px;
     border-radius: 10px 10px 0px 0px;
     padding: 5px;
