--- a/style/style.css
+++ b/style/style.css
@@ -83,7 +83,7 @@ main {
     min-width: 300px;
     max-width: 800px;
     margin: auto auto 10px auto; 
-    padding: 15px;
+    padding: 25px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.418);
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
@@ -98,11 +98,11 @@ main h1, h2 {
     padding: 5px 0px;
 }
 main h1 {
-    font-size: 2em;
+    font-size: 1.5em;
 }
 
 main h2 {
-    font-size: 1.5em;
+    font-size: 1.3em;
 }
 
 main p {
@@ -188,9 +188,20 @@ aside abbr {
 
 footer {
     padding: 5px;
-    background-color: #6C8079;
-    color: white;
+    background-color: #275a48;
     text-align: center;
     font-size: 0.8em;
+    transition-delay: 0.1s;
+    transition-duration: 0.4s;
 
+}
+
+footer a {
+    text-decoration: underline;
+    color: #ffffff;
+}
+
+footer:hover {
+    background-color: #1c4134;
+    font-weight: bold;
 }
