--- a/style/style.css
+++ b/style/style.css
@@ -64,12 +64,13 @@ nav {
 
 nav > a {
     color: white;
-    font-size: 0.8em;
+    font-size: 1em;
     font-weight: normal;
     text-decoration: none;
     margin: 0px;
-    padding: 10px;
+    padding: 15px;
     transition-duration: 0.5s;
+    transition-delay: 0.2s;
 }
 
 nav > a:hover {
